# gorg

./: .gitignore  CHANGELOG.txt  MAKE-CONFIG.txt  Makefile  README.md
gorg-cli/: CMakeLists.txt
gorg-cli/inc/: asset_collection.h  command_processor.h  gorg_asset.h  gorg_asset_file.h  help.h  html_generator.h  makefile.h  makefile.h.template  project_paths.h
gorg-cli/src/: asset_collection.cpp  command_processor.cpp  gorg_asset.cpp  gorg_asset_file.cpp  html_generator.cpp  main.cpp
gorg-cli/templates/: gorgasset.template  gorgindex.html
gorg-docs/: commands.rst  drafts.rst  gorgasset.rst  gorggen.rst  gorgmeta.rst  index.rst
gorg-docs/commands/: asset.rst  generate.rst
gorg-docs/files/: gorgasset.rst
gorg-index-template/: .env  .eslintcache  .gitignore  package-lock.json  package.json  template.html
gorg-index-template/config/: webpack.config.js
gorg-index-template/css/: style.css
gorg-index-template/js/: assets-mockup.js  assets.js  gorg.js
gorg-index-template/src/: App.js  Assets.js  MockAssets.js  ResultList.css  ResultList.js  SearchBar.css  SearchBar.js
gorg-installer/: win-gorg.wxs
sam-docs/: conf.py  fileformat.rst  gorgrule.rst  index.rst
